--- a/inst/templates/season_report.Rmd
+++ b/inst/templates/season_report.Rmd
@@ -23,27 +23,26 @@ library(stringi)
 
 ```{r import, include = FALSE}
 
-# Define what states, provinces, districts, etc are acceptable address abbreviations
-acceptable_residences <-
-        c("AL", "AK", "AZ", "AR", "CA", "CO", "CT", "DE", "FL", "GA", "ID",
-          "IL", "IN", "IA", "KS", "KY", "LA", "ME", "MD", "MA", "MI", "MN",
-          "MS", "MO", "MT", "NE", "NV", "NH", "NJ", "NM", "NY", "NC", "ND",
-          "OH", "OK", "OR","PA", "RI", "SC", "SD", "TN", "TX", "UT", "VT",
-          "VA", "WA", "WV", "WI", "WY", "DC", "HI", "AS", "GU", "MP", "PR", 
-          "VI", "UM", "AA", "AE","AP")
-```
+# Get the directories for the season
+dirs <- 
+  list.files(dl_path, recursive = TRUE)  %>%
+  as_tibble() %>%
+  mutate(
+    value = 
+      str_extract(value, "DL[0-9]{4}") %>% 
+      paste0(dl_path, .)) %>% 
+  distinct()
 
-```{r import2, include = FALSE}
+# Get total number of lines of data
+season_lines <- map(1:nrow(dirs), ~sumLines(dirs[.x,] %>% pull()))
+rm(dirs)
+
 # Run the read function
 dl_data <- read_hip(params$comp_path, season = TRUE) 
-```
 
-```{r import3, include = FALSE}
 # Run the clean function
 cleaned_data <- clean(dl_data)
-```
 
-```{r import4, include = FALSE}
 # Run the fixDuplicates function
 fixed_data <- fixDuplicates(cleaned_data)
 
@@ -67,21 +66,22 @@ fixed_dates_data <-
   select(-c("birth_date", "birth_date2")) %>%
   rename(birth_date = birth_date3) %>%
   relocate(birth_date, .before = "issue_date") 
-```
 
-```{r import5, include = FALSE}
+rm(fixed_data)
+
 # Snoop for line shift errors
 error_keys <- 
   fixed_dates_data %>% 
   filter(
-    !str_detect(birth_date, "^[0-9]{2}\\/[0-9]{2}\\/[0-9]{4}$")) %>% 
+    !str_detect(
+      birth_date, "^[0-9]{2}\\/[0-9]{2}\\/[0-9]{4}$")) %>% 
   relocate(record_key, .before = "title") %>% 
   relocate(source_file, .before = "record_key") %>%
   select(record_key) %>% 
   pull()
 
 # Correct frame shifts for x number of records
-unshifted_data <-
+unshifted <-
   map_dfr(
     1:length(error_keys),
     ~shiftFix(fixed_data, error_keys[.x], "state", "email", 1)
@@ -95,28 +95,31 @@ unshifted_data <-
         paste0("0", birth_date),
         birth_date))
 
-rm(fixed_data)
-```
+unshifted_data <-
+  fixed_dates_data %>%
+  filter(!record_key %in% unshifted$record_key) %>%
+  bind_rows(unshifted) 
 
-```{r import6, include = FALSE}
+rm(unshifted)
+
 # Run the proof function
 proofed_data <- proof(unshifted_data, year = params$year)
-```
 
-```{r import7, include = FALSE}
 # Run the correct function
 corrected_data <- correct(proofed_data, year = params$year, data = "bag")
 
 # Summarize number of records from Canada
 canada_records <-
   unshifted_data %>% 
-  filter(state %in% c("AB", "BC", "MB", "NB", "NL", "NT", "NS", "NU", "ON", "PE", "QC", "SK", "YT"))
+  filter(
+    state %in% c("AB", "BC", "MB", "NB", "NL", "NT", "NS", 
+                 "NU", "ON", "PE", "QC", "SK", "YT"))
 
 ```
 
 # Introduction
 
-This is a summary report of the `r params$year`-`r params$year+1` season of Harvest Information Program (HIP) data. This year, `r nrow(dl_data)` total records and `r nrow(unshifted_data)` unique records were submitted in `r length(list.files(params$comp_path, recursive = TRUE) %>% as_tibble() %>% transmute(filepath = as.character(value)) %>% mutate(filepath = str_replace(filepath, "TXT", "txt")) %>% filter(str_detect(filepath, "(?<=\\.)txt$")) %>% pull)` files from `r proofed_data %>% select(dl_state) %>% distinct %>% nrow()` states.
+This is a summary report of the `r params$year`-`r params$year+1` season of Harvest Information Program (HIP) data. This year, `r sum(season_lines)` total records and `r nrow(dl_data)` unique records were submitted in `r length(list.files(params$comp_path, recursive = TRUE) %>% as_tibble() %>% transmute(filepath = as.character(value)) %>% mutate(filepath = str_replace(filepath, "TXT", "txt")) %>% filter(str_detect(filepath, "(?<=\\.)txt$")) %>% filter(!str_detect(filepath, "permit")) %>% filter(!str_detect(filepath, "removed")) %>% pull())` files from `r proofed_data %>% select(dl_state) %>% distinct %>% nrow()` states. A total of `r nrow(canada_records)` registered hunters were from Canada.
 
 Below is a table summarizing the total of number of records per download state.
 
@@ -129,6 +132,7 @@ DT::datatable(
     summarize(sum = n()) %>% 
     ungroup())
 
+rm(canada_records)
 ```
 
 # Data Checking
@@ -265,13 +269,13 @@ rm(dl_data)
 
 ### Before fixDuplicates (all 49 states)
 
-```{r b_fd, echo = FALSE, fig.align = "center"}
+```{r b_fd, echo = FALSE, warning = FALSE, fig.align = "center"}
 findDuplicates(cleaned_data)
 ```
 
 ### After fixDuplicates (all 49 states)
 
-```{r a_fd, echo = FALSE}
+```{r a_fd, echo = FALSE, warning = FALSE}
 rm(cleaned_data)
 findDuplicates(unshifted_data)
 
@@ -408,13 +412,6 @@ errorPlot_dl(proofed_data)
 errorPlot_dl(corrected_data)
 
 rm(corrected_data)
-```
-
-## Canadian hunters
-
-
-```{r oosh, echo = FALSE}
-DT::datatable(canada_records)
 ```
 
 ## Out-of-state hunters
