season_report template: converted map to map_dbl for summing func to work

--- a/inst/templates/season_report.Rmd
+++ b/inst/templates/season_report.Rmd
@@ -34,7 +34,7 @@ dirs <-
   distinct()
 
 # Get total number of lines of data
-season_lines <- map(1:nrow(dirs), ~sumLines(dirs[.x,] %>% pull()))
+season_lines <- map_dbl(1:nrow(dirs), ~sumLines(dirs[.x,] %>% pull()))
 rm(dirs)
 
 # Run the read function
