--- a/vignettes/migbirdHIP_workflow.Rmd
+++ b/vignettes/migbirdHIP_workflow.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "The migbirdHarvestData Workflow"
-package: migbirdHarvestData
+title: "The migbirdHIP Workflow"
+package: migbirdHIP
 output:
   rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{The migbirdHarvestData Workflow}
+  %\VignetteIndexEntry{The migbirdHIP Workflow}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -48,7 +48,7 @@ vignette: >
 
 ## Introduction
 
-The *migbirdHarvestData* package was created for the U.S. Fish and Wildlife Service (USFWS) to wrangle, tidy, and visualize Harvest Information Program (HIP) data.
+The *migbirdHIP* package was created for the U.S. Fish and Wildlife Service (USFWS) to wrangle, tidy, and visualize Harvest Information Program (HIP) data.
 
 HIP data have been used since 1999 to make important management decisions for migratory game birds in the United States. Raw hunting activity data are processed in this package. To read more about HIP, visit: [https://www.fws.gov/harvestsurvey/](https://www.fws.gov/harvestsurvey/)
 
@@ -58,14 +58,14 @@ The package can be installed from the USFWS GitHub repository using:
 
 ```r
 library(devtools)
-install_github("USFWS/migbirdHarvestData")
+install_github("USFWS/migbirdHIP")
 ```
 
 ### Functions overview
 
-The flowchart below is a visual guide to the order in which functions are used. Some functions are only used situationally and some issues with the data cannot be solved using a function at all. The general process of handling HIP data is demonstrated here; every function in the *migbirdHarvestData* package is included.
+The flowchart below is a visual guide to the order in which functions are used. Some functions are only used situationally and some issues with the data cannot be solved using a function at all. The general process of handling HIP data is demonstrated here; every function in the *migbirdHIP* package is included.
 
-<img src="image/migbirdHarvestData_flowchart.svg" title="Overview of migbirdHarvestData functions in a flowchart format." alt="Overview of migbirdHarvestData functions in a flowchart format." width="100%" style="display: block; margin: auto;" />
+<img src="image/migbirdHIP_flowchart.svg" title="Overview of migbirdHIP functions in a flowchart format." alt="Overview of migbirdHIP functions in a flowchart format." width="100%" style="display: block; margin: auto;" />
 
 ## Part A: Data Import and Cleaning
 
@@ -77,33 +77,19 @@ The `read_hip` function allows data to be read in for just a specific state or f
 
 
 ```r
-library(migbirdHarvestData)
+library(migbirdHIP)
+```
 
+```
+## Error in library(migbirdHIP): there is no package called 'migbirdHIP'
+```
+
+```r
 DL1202 <- read_hip("C:/HIP/DL1202")
 ```
 
 ```
-## # A tibble: 4 x 3
-##   filepath                     encoding   confidence
-##   <chr>                        <chr>           <dbl>
-## 1 C:/HIP/DL1202/MO20201216.txt ISO-8859-1       0.27
-## 2 C:/HIP/DL1202/NE20201209.txt ISO-8859-1       0.29
-## 3 C:/HIP/DL1202/NE20201209.txt ISO-8859-2       0.22
-## 4 C:/HIP/DL1202/SC20201202.txt ISO-8859-1       0.28
-## # A tibble: 103 x 5
-##    dl_state X2          X4           X8    X10       
-##    <chr>    <chr>       <chr>        <chr> <chr>     
-##  1 FL       <NA>        KYI          FL    10/28/1990
-##  2 GA       TYLER       CARY         <NA>  10/27/1985
-##  3 GA       DANIEL      BLODGETT     <NA>  03/28/1955
-##  4 GA       JUAN        ORTIZ-ATILES <NA>  01/04/1974
-##  5 GA       CODY        CORMIER      <NA>  09/12/1997
-##  6 GA       THOMAS      BRENNAN      <NA>  02/19/1992
-##  7 GA       CHRISTOPHER PERRONE      <NA>  06/25/2001
-##  8 GA       ANDREW      ADAMS        <NA>  09/08/2001
-##  9 GA       MASON       HITCHCOCK    <NA>  05/31/2002
-## 10 GA       WILLIS      MANCIL       <NA>  05/24/2003
-## # ... with 93 more rows
+## Error in read_hip("C:/HIP/DL1202"): could not find function "read_hip"
 ```
 
 Did you get a warning or three? Read an explanation of common `read_hip` warnings, [below](#common-read_hip-warnings).
@@ -124,6 +110,10 @@ After data are read, we `clean`:
 
 ```r
 DL1202_clean <- clean(DL1202)
+```
+
+```
+## Error in clean(DL1202): could not find function "clean"
 ```
 
 This function renames columns and does simple mutations. Importantly, records are discarded if first name, last name, birth date, address, state of residence, OR city AND zip are missing.
@@ -148,7 +138,9 @@ The `findDuplicates` function finds hunters that have more than one registration
 findDuplicates(DL1202_clean)
 ```
 
-<img src="figure/findDuplicates-1.png" title="Figure 1. Plot of types of duplicates." alt="Figure 1. Plot of types of duplicates." width="500" style="display: block; margin: auto;" />
+```
+## Error in findDuplicates(DL1202_clean): could not find function "findDuplicates"
+```
 
 
 ```r
@@ -156,28 +148,7 @@ findDuplicates(DL1202_clean, return = "table")
 ```
 
 ```
-## # A tibble: 19 x 2
-##    dupl                     count
-##    <chr>                    <int>
-##  1 address                      4
-##  2 address-city-email           1
-##  3 address-email                1
-##  4 address-issue_date           1
-##  5 address-issue_date-email     1
-##  6 bag                          6
-##  7 city-issue_date              1
-##  8 email                        3
-##  9 issue_date                  27
-## 10 issue_date-email             1
-## 11 middle-address               1
-## 12 middle-address-email         2
-## 13 middle-issue_date            2
-## 14 middle-issue_date-email      1
-## 15 middle-zip-email             1
-## 16 suffix                       1
-## 17 suffix-address-email         1
-## 18 suffix-issue_date            1
-## 19 zip                          1
+## Error in findDuplicates(DL1202_clean, return = "table"): could not find function "findDuplicates"
 ```
 
 ### fixDuplicates
@@ -202,7 +173,7 @@ DL1202_fixed <- fixDuplicates(DL1202_clean)
 ```
 
 ```
-## Warning in ~as.numeric(.): NAs introduced by coercion
+## Error in fixDuplicates(DL1202_clean): could not find function "fixDuplicates"
 ```
 
 ### strataCheck
@@ -217,20 +188,7 @@ strataCheck(DL1202_fixed)
 ```
 
 ```
-## # A tibble: 148 x 4
-##    dl_state spp                state_strata normal_strata   
-##    <chr>    <chr>              <chr>        <chr>           
-##  1 OR       dove_bag           0            1, 2, 3, 5      
-##  2 OR       ducks_bag          0            1, 2, 3, 4      
-##  3 OR       geese_bag          0            1, 2, 3, 4      
-##  4 OR       band_tailed_pigeon 0            1, 2            
-##  5 OR       brant              0            1, 2            
-##  6 OR       coots_snipe        0            1, 2            
-##  7 OR       seaducks           0            1, 2            
-##  8 MO       dove_bag           9            0, 1, 2, 3, 5   
-##  9 NE       dove_bag           9            0, 1, 2, 3, 5   
-## 10 MO       woodcock_bag       9            0, 1, 2, 3, 4, 5
-## # ... with 138 more rows
+## Error in strataCheck(DL1202_fixed): could not find function "strataCheck"
 ```
 
 ### validate
@@ -245,20 +203,7 @@ validate(DL1202_fixed, type = "horizontal")
 ```
 
 ```
-## # A tibble: 47 x 5
-##    source_file    h_value h_rep h_total prop_repeat
-##    <chr>          <chr>   <int>   <int>       <dbl>
-##  1 WI20201216.txt 1         465     546       0.852
-##  2 AL20201216.txt 1        5773    7049       0.819
-##  3 MI20201216.txt 1         340     416       0.817
-##  4 SC20201202.txt 1        6308    7831       0.806
-##  5 MS20201215.txt 1        6706    8924       0.751
-##  6 MO20201216.txt 1        2954    4047       0.730
-##  7 RI20201216.txt 1         101     156       0.647
-##  8 CT20201216.txt 1          73     114       0.640
-##  9 OH20201216.txt 1         627    1055       0.594
-## 10 MN20201216.txt 1         732    1278       0.573
-## # ... with 37 more rows
+## Error in validate(DL1202_fixed, type = "horizontal"): could not find function "validate"
 ```
 
 <b>Vertically.</b> The vertical check searches within each column for repetition. Any species group column with the same value in all rows will be detected. *Coming soon:* States that do not have a hunting season for one or more species groups (e.g. seaducks) will not be returned using this function for reporting all zero values. The default version of this function (`all = FALSE`) only checks duck bags. If the parameter is set to `all = TRUE`, every species group will be checked.
@@ -271,7 +216,7 @@ validate(DL1202_fixed, type = "vertical")
 ```
 
 ```
-## Data are good to go! No vertical repetition detected.
+## Error in validate(DL1202_fixed, type = "vertical"): could not find function "validate"
 ```
 
 ... and `period = "dl_cycle"`.
@@ -282,7 +227,7 @@ validate(DL1202_fixed, type = "vertical", period = "dl_cycle")
 ```
 
 ```
-## Data are good to go! No vertical repetition detected.
+## Error in validate(DL1202_fixed, type = "vertical", period = "dl_cycle"): could not find function "validate"
 ```
 
 It is not possible to include as much detail in the vertical output as in the horizontal output without being specific about which state, species, and time scale you wish to assess. Vertical repetition returned in the output from this function can be looked at more closely using `investigate`.
@@ -304,10 +249,7 @@ investigate(
 ```
 
 ```
-## # A tibble: 1 x 2
-##   dove_bag source_file   
-##   <chr>    <chr>         
-## 1 0        AK20201215.txt
+## Error in investigate(DL1202_fixed, loc = "AK", period_type = "dl_date", : could not find function "investigate"
 ```
 
 ## Part B: Data Proofing and Correction
@@ -319,6 +261,10 @@ After data are cleaned and checked for any important issues that would require m
 
 ```r
 DL1202_proofed <- proof(DL1202_fixed, year = 2020)
+```
+
+```
+## Error in proof(DL1202_fixed, year = 2020): could not find function "proof"
 ```
 
 Data that are considered irregular are flagged in a new column called "errors". No actual corrections take place in this step; all data remain identical except for the new "errors" column. For each field, values are compared to standard expected formats and if they do not conform, the field name is pasted as a string in the "errors" column. Each row can have from zero errors (NA) to all column names listed. Multiple flags are hyphen delimited.
@@ -335,24 +281,7 @@ DL1202_corrected <- correct(DL1202_proofed, year = 2020, data = "bag")
 ```
 
 ```
-## Warning: Zip codes detected that do not correspond to provided state of residence.
-```
-
-```
-## # A tibble: 474 x 4
-##    record_key  zip   state zipState
-##    <chr>       <chr> <chr> <chr>   
-##  1 record_292  32525 AL    FL      
-##  2 record_330  34044 AL    AA      
-##  3 record_1935 15425 AL    PA      
-##  4 record_3403 63804 AL    MO      
-##  5 record_5325 36564 MS    AL      
-##  6 record_6417 79556 FL    TX      
-##  7 record_7090 65466 AL    MO      
-##  8 record_7183 44023 AR    OH      
-##  9 record_7223 38655 TN    MS      
-## 10 record_7236 76182 AR    TX      
-## # ... with 464 more rows
+## Error in correct(DL1202_proofed, year = 2020, data = "bag"): could not find function "correct"
 ```
 
 The following changes are made by the `correct` function:
@@ -422,7 +351,7 @@ pullErrors(DL1202_proofed, error = "dove_bag")
 ```
 
 ```
-## [1] "4" "9"
+## Error in pullErrors(DL1202_proofed, error = "dove_bag"): could not find function "pullErrors"
 ```
 
 ### manualFix
@@ -471,23 +400,8 @@ The `outOfStateHunters` function plots and tabulates how many hunters registered
 outOfStateHunters(DL1202_proofed)
 ```
 
-<img src="figure/outofstate-1.png" title="Figure 6. Plot of proportions of out-of-state hunters." alt="Figure 6. Plot of proportions of out-of-state hunters." width="500" style="display: block; margin: auto;" />
-
 ```
-## # A tibble: 31 x 3
-##    dl_state n_total outofstate_prop
-##    <chr>      <int>           <dbl>
-##  1 AK           106            0.41
-##  2 AL          7049            0.15
-##  3 AR          6568            0.65
-##  4 CA          3998            0.06
-##  5 CO          1748            0.09
-##  6 CT           114            0.1 
-##  7 FL          3652            0.09
-##  8 GA          3577            0.12
-##  9 IA          3229            0.05
-## 10 ID          1872            0.22
-## # ... with 21 more rows
+## Error in outOfStateHunters(DL1202_proofed): could not find function "outOfStateHunters"
 ```
 
 ### youthHunters
@@ -499,15 +413,8 @@ The `youthHunters` function returns a table and plot of the number of hunters wi
 youthHunters(DL1202_proofed, year = 2020)
 ```
 
-<img src="figure/youth-1.png" title="Figure 7. Plot of proportions of youth hunters." alt="Figure 7. Plot of proportions of youth hunters." width="500" style="display: block; margin: auto;" />
-
 ```
-## # A tibble: 3 x 4
-##   dl_state registered_youth total_registered youth_proportion
-##   <chr>               <int>            <int>            <dbl>
-## 1 MO                      1             4047         0.000247
-## 2 ND                    117              175         0.669   
-## 3 NE                      1              547         0.00183
+## Error in youthHunters(DL1202_proofed, year = 2020): could not find function "youthHunters"
 ```
 
 ### errorPlot_fields
@@ -519,7 +426,9 @@ The `errorPlot_fields` function can be run on all states...
 errorPlot_fields(DL1202_proofed, loc = "all", year = 2020)
 ```
 
-<img src="figure/errorfieldsplotall-1.png" title="Figure 2. Plot of all location's errors by field name." alt="Figure 2. Plot of all location's errors by field name." width="500" style="display: block; margin: auto;" />
+```
+## Error in errorPlot_fields(DL1202_proofed, loc = "all", year = 2020): could not find function "errorPlot_fields"
+```
 
 ... or it can be limited to just one.
 
@@ -528,7 +437,9 @@ errorPlot_fields(DL1202_proofed, loc = "all", year = 2020)
 errorPlot_fields(DL1202_proofed, loc = "LA", year = 2020)
 ```
 
-<img src="figure/errorfieldsplotsc-1.png" title="Figure 3. Plot of all North Carolina's errors by field name." alt="Figure 3. Plot of all North Carolina's errors by field name." width="500" style="display: block; margin: auto;" />
+```
+## Error in errorPlot_fields(DL1202_proofed, loc = "LA", year = 2020): could not find function "errorPlot_fields"
+```
 
 The `youth` parameter can be set to TRUE for `errorPlot_fields` to view the proportion of "errors" created by youth hunters. Youth hunters are not included in the error plot if `youth = FALSE` (set as default).
 
@@ -537,7 +448,9 @@ The `youth` parameter can be set to TRUE for `errorPlot_fields` to view the prop
 errorPlot_fields(DL1202_proofed, year = 2020, youth = TRUE)
 ```
 
-<img src="figure/errorfieldsplotyouth-1.png" title="Figure 4. Plot of all location's errors by field name, with stacked colors to indicate if there are youth hunters or Canadian zip codes in the data, two common causes of error." alt="Figure 4. Plot of all location's errors by field name, with stacked colors to indicate if there are youth hunters or Canadian zip codes in the data, two common causes of error." width="500" style="display: block; margin: auto;" />
+```
+## Error in errorPlot_fields(DL1202_proofed, year = 2020, youth = TRUE): could not find function "errorPlot_fields"
+```
 
 It is possible to add any `ggplot2` components to these plots. For season total data specifically, the plot can be facet_wrapped using either dl_cycle or dl_date. The example below demonstrates how this package's functions can interact with the tidyverse and shows an example of an `errorPlot_fields` facet_wrap (using a subset of 4 download cycles)
 
@@ -562,7 +475,9 @@ The `errorPlot_states` function plots error proportions per state. You may optio
 errorPlot_states(DL1202_proofed)
 ```
 
-<img src="figure/errorplotstates-1.png" title="Figure 5. Plot of proportion of error by state." alt="Figure 5. Plot of proportion of error by state." width="500" style="display: block; margin: auto;" />
+```
+## Error in errorPlot_states(DL1202_proofed): could not find function "errorPlot_states"
+```
 
 ### errorPlot_dl
 
@@ -585,20 +500,7 @@ errorTable(DL1202_proofed)
 ```
 
 ```
-## # A tibble: 122 x 3
-##    dl_state error      error_count
-##    <chr>    <chr>            <dbl>
-##  1 AK       birth_date           2
-##  2 AL       birth_date         190
-##  3 AL       city                 1
-##  4 AL       firstname            7
-##  5 AL       lastname             1
-##  6 AL       suffix              10
-##  7 AR       birth_date         176
-##  8 AR       email                1
-##  9 AR       firstname           14
-## 10 AR       suffix              63
-## # ... with 112 more rows
+## Error in errorTable(DL1202_proofed): could not find function "errorTable"
 ```
 
 Errors can be reported by only location by turning off the `field` parameter.
@@ -609,20 +511,7 @@ errorTable(DL1202_proofed, field = "none")
 ```
 
 ```
-## # A tibble: 31 x 2
-##    dl_state error_count
-##    <chr>          <dbl>
-##  1 AK                 2
-##  2 AL               209
-##  3 AR               257
-##  4 CA               464
-##  5 CO               193
-##  6 CT               120
-##  7 FL                35
-##  8 GA                57
-##  9 IA              3216
-## 10 ID               154
-## # ... with 21 more rows
+## Error in errorTable(DL1202_proofed, field = "none"): could not find function "errorTable"
 ```
 
 Errors can be reported by only field by turning off the `loc` parameter.
@@ -633,28 +522,7 @@ errorTable(DL1202_proofed, loc = "none")
 ```
 
 ```
-## # A tibble: 19 x 2
-##    error              error_count
-##    <chr>                    <dbl>
-##  1 band_tailed_pigeon           2
-##  2 birth_date                5634
-##  3 city                         3
-##  4 coots_snipe                 60
-##  5 cranes                      49
-##  6 dove_bag                   113
-##  7 ducks_bag                 3107
-##  8 email                     5495
-##  9 firstname                  111
-## 10 geese_bag                   38
-## 11 hunt_mig_birds              20
-## 12 lastname                    10
-## 13 rails_gallinules            48
-## 14 registration_yr              4
-## 15 seaducks                     1
-## 16 state                        6
-## 17 suffix                     283
-## 18 woodcock_bag                 4
-## 19 zip                          9
+## Error in errorTable(DL1202_proofed, loc = "none"): could not find function "errorTable"
 ```
 
 Location can be specified.
@@ -665,12 +533,7 @@ errorTable(DL1202_proofed, loc = "CA")
 ```
 
 ```
-## # A tibble: 3 x 3
-##   dl_state error      error_count
-##   <chr>    <chr>            <dbl>
-## 1 CA       birth_date         410
-## 2 CA       dove_bag            53
-## 3 CA       firstname            1
+## Error in errorTable(DL1202_proofed, loc = "CA"): could not find function "errorTable"
 ```
 
 Field can be specified.
@@ -681,10 +544,7 @@ errorTable(DL1202_proofed, field = "suffix")
 ```
 
 ```
-## # A tibble: 1 x 2
-##   error  error_count
-##   <chr>        <dbl>
-## 1 suffix         283
+## Error in errorTable(DL1202_proofed, field = "suffix"): could not find function "errorTable"
 ```
 
 Total errors for a location can be pulled.
@@ -695,10 +555,7 @@ errorTable(DL1202_proofed, loc = "CA", field = "none")
 ```
 
 ```
-## # A tibble: 1 x 2
-##   dl_state total_errors
-##   <chr>           <dbl>
-## 1 CA                464
+## Error in errorTable(DL1202_proofed, loc = "CA", field = "none"): could not find function "errorTable"
 ```
 
 Total errors for a field in a particular location can be pulled.
@@ -709,10 +566,7 @@ errorTable(DL1202_proofed, loc = "CA", field = "dove_bag")
 ```
 
 ```
-## # A tibble: 1 x 3
-##   dl_state error    error_count
-##   <chr>    <chr>          <dbl>
-## 1 CA       dove_bag          53
+## Error in errorTable(DL1202_proofed, loc = "CA", field = "dove_bag"): could not find function "errorTable"
 ```
 
 ### redFlags
@@ -726,11 +580,7 @@ redFlags(DL1202_proofed, type = "state", threshold = 0.03)
 ```
 
 ```
-## # A tibble: 2 x 5
-##   dl_state count_errors count_correct proportion flag        
-##   <chr>           <int>         <int>      <dbl> <chr>       
-## 1 CT                120          2730     0.0421 error > 0.03
-## 2 IA               3216         77509     0.0398 error > 0.03
+## Error in redFlags(DL1202_proofed, type = "state", threshold = 0.03): could not find function "redFlags"
 ```
 
 <b>By field.</b>
@@ -742,12 +592,7 @@ redFlags(DL1202_proofed, type = "field", threshold = 0.01)
 ```
 
 ```
-## # A tibble: 3 x 5
-##   errors     count_errors count_correct proportion flag        
-##   <chr>             <int>         <int>      <dbl> <chr>       
-## 1 birth_date         5634         87356     0.0606 error > 0.01
-## 2 email              5495         87495     0.0591 error > 0.01
-## 3 ducks_bag          3107         89883     0.0334 error > 0.01
+## Error in redFlags(DL1202_proofed, type = "field", threshold = 0.01): could not find function "redFlags"
 ```
 
 ## Troubleshooting
@@ -782,7 +627,7 @@ Some of these functions require a lot of memory to run. To help your R session p
 
 <b>Issue reporting</b>
 
-If you find a bug in the package, it's advised to [create an issue](https://github.com/USFWS/migbirdHarvestData/issues) at the package's GitHub repo, https://github.com/USFWS/migbirdHarvestData.
+If you find a bug in the package, it's advised to [create an issue](https://github.com/USFWS/migbirdHIP/issues) at the package's GitHub repo, https://github.com/USFWS/migbirdHIP.
 
 <b>Questions?</b>
 
