season_report template: updates to table outputs and other improvements

--- a/inst/templates/season_report.Rmd
+++ b/inst/templates/season_report.Rmd
@@ -497,6 +497,10 @@ rm(corrected_data)
 outOfStateHunters(proofed_data)
 ```
 
+```{r canadians_tbl, echo = FALSE}
+DT::datatable(outOfStateHunters(proofed_data, output = "table"))
+```
+
 ## Youth hunters
 
 ```{r yh, echo = FALSE, fig.align = "center"}
