season_report template: removed warning from integer conversion

--- a/inst/templates/season_report.Rmd
+++ b/inst/templates/season_report.Rmd
@@ -370,7 +370,7 @@ DT::datatable(
         unshifted_data %>% 
         select(matches("bag|coots|rails|cranes|pigeon|brant|seaducks")) %>% 
         names()), 
-      ~as.integer(.)) %>% 
+      ~suppressWarnings(as.integer(.))) %>% 
     ungroup() %>% 
     mutate(
       sumbags = 
