--- a/inst/templates/season_report.Rmd
+++ b/inst/templates/season_report.Rmd
@@ -568,7 +568,10 @@ if(et$error[1] != "birth_date"){
   err1 <- 
     pullErrors(proofed_data, error = et$error[1], distinct = FALSE) %>% 
     as_tibble() %>% 
-    mutate(value = stri_enc_toutf8(value, is_unknown_8bit = T, validate = T)) %>%
+    mutate(
+      value = 
+        suppressWarnings(
+          stri_enc_toutf8(value, is_unknown_8bit = T, validate = T))) %>%
     group_by(value) %>% 
     summarize(count = n()) %>% 
     ungroup() %>% 
@@ -595,7 +598,10 @@ if(et$error[2] != "birth_date"){
   err2 <- 
     pullErrors(proofed_data, error = et$error[2], distinct = FALSE) %>% 
     as_tibble() %>% 
-    mutate(value = stri_enc_toutf8(value, is_unknown_8bit = T, validate = T)) %>%
+    mutate(
+      value = 
+        suppressWarnings(
+          stri_enc_toutf8(value, is_unknown_8bit = T, validate = T))) %>%
     group_by(value) %>% 
     summarize(count = n()) %>% 
     ungroup() %>% 
@@ -622,7 +628,10 @@ if(et$error[3] != "birth_date"){
   err3 <- 
     pullErrors(proofed_data, error = et$error[3], distinct = FALSE) %>% 
     as_tibble() %>% 
-    mutate(value = stri_enc_toutf8(value, is_unknown_8bit = T, validate = T)) %>%
+    mutate(
+      value = 
+        suppressWarnings(
+          stri_enc_toutf8(value, is_unknown_8bit = T, validate = T))) %>%
     group_by(value) %>% 
     summarize(count = n()) %>% 
     ungroup() %>% 
